<resources>
    <string name="app_name">Fishibox</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="lupa_password"><u>Lupa password?</u></string>
    <string name="buat_akun">Buat Akun</string>
    <string name="buat_akun_u"><u>Buat Akun</u></string>
    <string name="daftar">Daftar</string>
    <string name="email">Email</string>
    <string name="daftar_sebagai">Daftar Sebagai</string>
    <string name="nelayan">Nelayan</string>
    <string name="pembeli">Pembeli</string>
    <string name="sudah_punya_akun_klik_disini">Sudah punya akun? Klik disini</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="data_tangkapan_nelayan">Data Tangkapan Nelayan</string>
    <string name="update">Update</string>
    <string name="nama">Nama</string>
    <string name="stok">Stok</string>
    <string name="tambahkan">Tambahkan</string>
    <string name="masukan_foto_ikan">Masukan Foto Ikan</string>
    <string name="choose_file">Choose File</string>
    <string name="field_empty">Field harus diisi!</string>
    <string name="register_success">Register berhasil!</string>
    <string name="invalid_email_password">Email/Password salah!</string>
    <string name="stock">Stock: %s</string>
    <string name="alamat">Alamat</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout"><u>Logout</u></string>
    <string name="masukan_foto">Masukan Foto</string>
    <string name="simpan">Simpan</string>
    <string name="deskripsi_produk">Deskripsi Produk</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="favorit">Favorit</string>
    <string name="keranjang">Keranjang</string>
    <string name="search">Search</string>
    <string name="harga">Harga</string>
    <string name="riwayat">Riwayat</string>
    <string name="check_out">Check out</string>
    <string name="data_deleted">Data telah dihapus dari favorite</string>
    <string name="home">Home</string>
    <string name="_1">1</string>
    <string name="alamat_pengiriman">Alamat Pengiriman</string>
    <string name="pengiriman">Pengiriman (GOJEK)</string>
    <string name="pembayaran">Metode Pembayaran (COD)</string>
    <string name="beli">Beli</string>
    <string name="metode_pengiriman">Metode Pengiriman</string>
    <string name="gojek">Gojek</string>
    <string name="grab">Grab</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="cod">COD</string>
    <string name="ovo">OVO</string>
    <string name="gopay">GoPay</string>
    <string name="total_pesanan">Total Pesanan</string>
    <string name="tanggal_pesan">Tanggal Pesan</string>
    <string name="total_bayar">Total Bayar</string>
    <string name="masukan_email_kamu">Masukan email kamu</string>
    <string name="kirim">Kirim</string>
    <string name="reset_password">Reset Password</string>
    <string name="pesan">Ketik disini</string>
</resources>