<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/user_home"
        android:title="@string/home"
        android:icon="@drawable/ic_outline_home_24"/>

    <item android:id="@+id/user_chat"
        android:title="@string/chat"
        android:icon="@drawable/ic_outline_chat_24"/>

    <item android:id="@+id/user_favorite"
        android:title="@string/favorit"
        android:icon="@drawable/ic_baseline_favorite_border_24"/>

    <item android:id="@+id/user_cart"
        android:title="@string/keranjang"
        android:icon="@drawable/ic_outline_shopping_cart_24"/>

    <item android:id="@+id/user_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_person_outline_24"/>
</menu>