<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".view.user.checkout.SendBottomSheet">

    <View
        android:layout_width="48dp"
        android:layout_height="4dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/rounded_primary"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metode_pembayaran"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="16dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">

        <RadioButton
            android:id="@+id/rb_cod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cod"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rb_ovo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ovo"/>

        <RadioButton
            android:id="@+id/rb_gopay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gopay"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/simpan"
        style="?attr/materialButtonOutlinedStyle"/>
</LinearLayout>